# rbx-merge

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: rbx-merge.gitattributes
rbx_merge/: Cargo.toml  LICENSE
rbx_merge/benches/: merge.rs  textconv.rs
rbx_merge/proptest-regressions/tests/: invariants.txt
rbx_merge/src/: conflict.rs  diagnostics.rs  format.rs  identity.rs  lib.rs  merge_graph.rs  render.rs  resolve.rs  semantic.rs
rbx_merge/src/tests/: common.rs  format.rs  identity.rs  invariants.rs  merge.rs  mod.rs  properties.rs  refs.rs  resolve.rs  textconv.rs
rbx_merge/src/tests/snapshots/: rbx_merge__tests__merge__clean_one_sided_add_diagnostics.snap  rbx_merge__tests__merge__clean_one_sided_add_output_xml.snap  rbx_merge__tests__merge__clean_one_sided_add_textconv.snap  rbx_merge__tests__merge__clean_one_sided_property_edit_diagnostics.snap  rbx_merge__tests__merge__clean_one_sided_property_edit_output_xml.snap  rbx_merge__tests__merge__clean_one_sided_property_edit_textconv.snap  rbx_merge__tests__merge__conflicting_property_edit_conflicts.snap  rbx_merge__tests__merge__conflicting_property_edit_diagnostics.snap  rbx_merge__tests__merge__unchanged_real_model_output_xml.snap  rbx_merge__tests__textconv__attributes_binary_textconv.snap  rbx_merge__tests__textconv__ref_child_xml_textconv.snap  rbx_merge__tests__textconv__three_intvalues_xml_textconv.snap
rbx_merge_cli/: Cargo.toml  LICENSE
rbx_merge_cli/src/: main.rs
rbx_merge_cli/tests/: cli.rs
