[workspace]
resolver = "2"
members = [
    "rbx_merge",
    "rbx_merge_cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# rbx_binary = { path = "../rbx-dom/rbx_binary" }
# rbx_dom_weak = { path = "../rbx-dom/rbx_dom_weak" }
# rbx_reflection = { path = "../rbx-dom/rbx_reflection" }
# rbx_reflection_database = { path = "../rbx-dom/rbx_reflection_database" }
# rbx_types = { path = "../rbx-dom/rbx_types" }
# rbx_xml = { path = "../rbx-dom/rbx_xml" }

rbx_binary = "2.0.1"
rbx_dom_weak = "4.1.0"
rbx_reflection = "6.1.0"
rbx_reflection_database = "2.0.2"
rbx_types = "3.1.0"
rbx_xml = "2.0.1"

anyhow = "1.0"
blake3 = "1.8"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
indexmap = "2.12"
insta = { version = "1.14.1", features = ["yaml", "filters"] }
log = "0.4"
proptest = "1"
thiserror = "1.0"
ustr = "1.1"
