[package]
name = "rbx_merge"
version.workspace = true
edition.workspace = true
license = "MIT"

[dependencies]
blake3.workspace = true
indexmap.workspace = true
rbx_binary.workspace = true
rbx_dom_weak.workspace = true
rbx_reflection.workspace = true
rbx_reflection_database.workspace = true
rbx_types.workspace = true
rbx_xml.workspace = true
thiserror.workspace = true
ustr.workspace = true

[dev-dependencies]
anyhow.workspace = true
insta.workspace = true
proptest.workspace = true
